--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
     <script src="game.js"></script>
-    <script src="level1.js"></script>
-    <script src="friendReaction.js"></script>
+    <!-- <script src="level1.js"></script> -->
+    <!-- <script src="friendReaction.js"></script> -->
 
 </head>
 
@@ -29,7 +29,7 @@
         function Friend(texture, name, xPos) {
 
             friendCntr = new PIXI.Container();
-            avatarCntr = new PIXI.Container();
+            this.avatarCntr = new PIXI.Container();
             Game.call(this);
 
             yPos = this.marginTop + 200;
@@ -65,10 +65,10 @@
                 .on('pointerout', deleteInteraction)
 
 
-            avatarCntr.addChild(this.orangeCircleSprite);
-            avatarCntr.addChild(this);
-            avatarCntr.addChild(this.name);
-            friendCntr.addChild(avatarCntr);
+            this.avatarCntr.addChild(this.orangeCircleSprite);
+            this.avatarCntr.addChild(this);
+            this.avatarCntr.addChild(this.name);
+            friendCntr.addChild(this.avatarCntr);
             app.stage.addChild(friendCntr);
 
             function generateInteraction() {
@@ -112,12 +112,12 @@
 
 
             this.click = function() {
-
+                this.avatarCntr.visible = false;
                 self = this;
-                var introObj = new FriendIntroduction();
-                introObj.prepareStage(self);
-                introObj.interAction();
-                introObj.displayStage();
+                var game = new Game();
+                game.prepareStage(self);
+                game.interAction();
+                game.displayStage();
 
             }
 
@@ -125,179 +125,6 @@
 
         inheritPrototype(Friend, PIXI.Sprite);
 
-        function FriendIntroduction() {
-
-            friendInroCntr = new PIXI.Container();
-
-            Game.call(this);
-
-
-        };
-
-
-        FriendIntroduction.prototype = {
-
-            constructor: FriendIntroduction,
-            prepareStage: function(self) {
-
-                self
-                    .on('pointerover', friendInteraction)
-                    .on('pointerout', friendInteractionOut)
-
-                function friendInteraction() {
-
-                    self.scale.set(.5);
-                    self.name.scale.set(1.2);
-
-                }
-
-                function friendInteractionOut() {
-                    self.scale.set(.5);
-                    self.name.scale.set(1.2);
-                }
-
-                self.scale.set(.5);
-                self.name.scale.set(1.2);
-                self.position.set(this.marginLeft - 50, this.marginTop + 200);
-                self.name.position.set(this.marginLeft + 50, this.marginTop + 350);
-                friendInroCntr.position.set(this.marginLeft, this.marginTop);
-
-            },
-
-
-            interAction: function() {
-
-                this.yellowArrow.position.set(this.marginLeft + 300, this.marginTop + 150);
-                this.yellowArrow.interactive = true;
-                this.yellowArrow.accessible = true;
-                this.yellowArrow.buttonMode = true;
-
-                this.yellowArrow
-                    .on('pointerover', arrowInteraction)
-                    .on('pointerout', arrowInteractionOut)
-
-                var parent = this;
-                function arrowInteraction() {
-
-                    parent.orangeArrow.visible = true;
-                    parent.dialogueText.visible = true;
-                    parent.dialogueBox.visible = true;
-                    parent.orangeArrow.position.set(parent.marginLeft+300, parent.marginTop+150);
-                    parent.dialogueText.position.set(parent.marginLeft+70, parent.marginTop+40);
-                    parent.dialogueBox.position.set(parent.marginLeft, parent.marginTop);
-
-                    display();
-
-                }
-
-                function arrowInteractionOut() {
-
-                    parent.orangeArrow.visible = false;
-                    parent.dialogueBox.visible = false;
-                    parent.dialogueText.visible = false;
-
-                }
-
-                function display(){
-                  friendInroCntr.addChild(parent.orangeArrow);
-                  friendInroCntr.addChild(parent.dialogueBox);
-                  friendInroCntr.addChild(parent.dialogueText);
-                }
-
-                this.yellowArrow.click = function() {
-
-                    friendInroCntr.visible = false;
-                    levelObj = new GameLevels();
-                    levelObj.prepareLevelsBackground();
-                    levelObj.InteractLevelObject();
-                    levelObj.displayLevels();
-                }
-
-            },
-
-            displayStage: function() {
-
-                friendInroCntr.addChild(this.background1);
-                friendInroCntr.addChild(self);
-                friendInroCntr.addChild(self.name);
-                friendInroCntr.addChild(this.yellowArrow);
-                app.stage.addChild(friendInroCntr);
-
-            }
-
-        }
-
-
-        function GameLevels() {
-            Game.call(this);
-            levelsStageCtr = new PIXI.Container();
-         };
-
-        GameLevels.prototype = {
-            constructor: GameLevels,
-            prepareLevelsBackground: function() {
-
-                this.levelsBg.position.set(this.marginLeft, this.marginTop);
-
-            },
-
-            InteractLevelObject: function() {
-
-                this.pigSprite.position.set(this.marginLeft + 178, this.marginTop + 175);
-
-                this.pigSprite.interactive = true;
-                this.pigSprite.buttonMode = true;
-                this.pigSprite.accessible = true;
-
-                this.pigSprite
-                  .on('pointerover', levelObjInteraction)
-                  .on('pointerout', levelObjInteractionOut)
-
-                var inside = this;
-                function levelObjInteraction(){
-
-                    inside.pigSprite.x = inside.marginLeft+215;
-                    inside.pigSprite.y = inside.marginTop+205;
-                    inside.pigSprite.anchor.x = 0.5;
-                    inside.pigSprite.anchor.y = 0.5;
-
-                    for(var i=0;i<30;i++)
-                    {
-
-                      inside.pigSprite.rotation += 0.01;
-
-                     }
-                 }
-
-                function levelObjInteractionOut(){
-
-                     inside.pigSprite.rotation = 0;
-
-                  }
-
-                this.pigSprite.click = function(){
-
-                  levelsStageCtr.visible = false;
-                  var playObj = new StartPlay();
-                  playObj.playArea();
-                  playObj.diasplayPlayArea();
-                  playObj.pigInitialPosition();
-                  playObj.calculation();
-                  playObj.pigChangedPosition();
-
-                }
-
-            },
-
-            displayLevels: function() {
-
-                levelsStageCtr.addChild(this.levelsBg);
-                levelsStageCtr.addChild(this.pigSprite);
-                app.stage.addChild(levelsStageCtr);
-
-            }
-
-        }
 
     </script>
 </body>
